--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -197,3 +197,40 @@ label.ant-checkbox-wrapper.ant-checkbox-group-item {
 .pb-4{
     padding-bottom: 1rem;
 }
+
+.container {
+    display: flex;
+    touch-action: none;
+ 
+    margin: 1rem auto;
+  }
+  
+  .dropzone {
+    flex: 1;
+    min-height: 100Vh;
+    max-height: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
+  }
+  
+  .dropzone.left {
+    margin-right: 10px;
+  }
+  
+  .grid-item {
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+  }
+  
+  .grid-item-content {
+ 
+    box-sizing: border-box;
+
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    border-radius: 50%;
+  }
+  
