delete chart added

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -234,3 +234,6 @@ label.ant-checkbox-wrapper.ant-checkbox-group-item {
     border-radius: 50%;
   }
   
+  .cursor-pointer{
+    cursor: pointer;
+  }
